# Capstone_Design_KW2021_LFS

./: .gitattributes  README.md
Packet2/: Packet.sln
Packet2/Debug/: Packet.ilk
Packet2/Packet/: Comm.cpp  Comm.h  Packet.vcxproj  Packet.vcxproj.filters  dataType.h  main.cpp
Packet2/Packet/Debug/: Packet.exe.recipe  vc142.idb
Packet2/Packet/Debug/Packet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Packet.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Turret/: .mxproject  STM32_Test.ioc
Turret/EWARM/: Project.eww  Project.eww.bak  STM32.dep  STM32.ewd.bak  STM32.ewp.bak  STM32.ewt  STM32_Test.dep  STM32_Test.ewd  STM32_Test.ewp
Turret/EWARM/STM32/: .ninja_deps  .ninja_log
Turret/EWARM/STM32/BrowseInfo/: .ninja_log  STM32.pbd.browse  STM32_part0.pbi  STM32_part1.pbi  STM32_part2.pbi  STM32_part3.pbi  STM32_part4.pbi  build.ninja
Turret/EWARM/STM32/BrowseInfo/Application/User/: main.pbi  main.pbi.dep  main.xcl  stm32f4xx_hal_msp.pbi  stm32f4xx_hal_msp.pbi.dep  stm32f4xx_hal_msp.xcl  stm32f4xx_it.pbi  stm32f4xx_it.pbi.dep  stm32f4xx_it.xcl
Turret/EWARM/STM32/BrowseInfo/Drivers/CMSIS/: system_stm32f4xx.pbi  system_stm32f4xx.pbi.dep  system_stm32f4xx.xcl
Turret/EWARM/STM32/BrowseInfo/Drivers/STM32F4xx_HAL_Driver/: stm32f4xx_hal.pbi  stm32f4xx_hal.pbi.dep  stm32f4xx_hal.xcl  stm32f4xx_hal_cortex.pbi  stm32f4xx_hal_cortex.pbi.dep  stm32f4xx_hal_cortex.xcl  stm32f4xx_hal_dma.pbi  stm32f4xx_hal_dma.pbi.dep  stm32f4xx_hal_dma.xcl  stm32f4xx_hal_dma_ex.pbi  stm32f4xx_hal_dma_ex.pbi.dep  stm32f4xx_hal_dma_ex.xcl  stm32f4xx_hal_exti.pbi  stm32f4xx_hal_exti.pbi.dep  stm32f4xx_hal_exti.xcl  stm32f4xx_hal_flash.pbi  stm32f4xx_hal_flash.pbi.dep  stm32f4xx_hal_flash.xcl  stm32f4xx_hal_flash_ex.pbi  stm32f4xx_hal_flash_ex.pbi.dep  stm32f4xx_hal_flash_ex.xcl  stm32f4xx_hal_flash_ramfunc.pbi  stm32f4xx_hal_flash_ramfunc.pbi.dep  stm32f4xx_hal_flash_ramfunc.xcl  stm32f4xx_hal_gpio.pbi  stm32f4xx_hal_gpio.pbi.dep  stm32f4xx_hal_gpio.xcl  stm32f4xx_hal_pwr.pbi  stm32f4xx_hal_pwr.pbi.dep  stm32f4xx_hal_pwr.xcl  stm32f4xx_hal_pwr_ex.pbi  stm32f4xx_hal_pwr_ex.pbi.dep  stm32f4xx_hal_pwr_ex.xcl  stm32f4xx_hal_rcc.pbi  stm32f4xx_hal_rcc.pbi.dep  stm32f4xx_hal_rcc.xcl  stm32f4xx_hal_rcc_ex.pbi  stm32f4xx_hal_rcc_ex.pbi.dep  stm32f4xx_hal_rcc_ex.xcl  stm32f4xx_hal_tim.pbi  (+8 more)
Turret/EWARM/STM32/Exe/: Jscope_test.jscope  STM32.hex  STM32.out  STM32.sim
Turret/EWARM/STM32/List/: STM32.map
Turret/EWARM/STM32_Test/: .ninja_deps  .ninja_log
Turret/EWARM/STM32_Test/BrowseInfo/: .ninja_log  STM32_Test.pbd  STM32_Test_part0.pbi  STM32_Test_part1.pbi  STM32_Test_part2.pbi  STM32_Test_part3.pbi  STM32_Test_part4.pbi  build.ninja
Turret/EWARM/STM32_Test/BrowseInfo/Application/User/: main.pbi  main.pbi.dep  main.xcl  stm32f4xx_hal_msp.pbi  stm32f4xx_hal_msp.pbi.dep  stm32f4xx_hal_msp.xcl  stm32f4xx_it.pbi  stm32f4xx_it.pbi.dep  stm32f4xx_it.xcl
Turret/EWARM/STM32_Test/BrowseInfo/Drivers/CMSIS/: system_stm32f4xx.pbi  system_stm32f4xx.pbi.dep  system_stm32f4xx.xcl
Turret/EWARM/STM32_Test/BrowseInfo/Drivers/STM32F4xx_HAL_Driver/: stm32f4xx_hal.pbi  stm32f4xx_hal.pbi.dep  stm32f4xx_hal.xcl  stm32f4xx_hal_adc.pbi  stm32f4xx_hal_adc.pbi.dep  stm32f4xx_hal_adc.xcl  (+48 more)
Turret/EWARM/STM32_Test/Exe/: 0502.jscope  0506.jscope  0514.jscope  STM32_Test.hex  STM32_Test.out  STM32_Test.sim  asdfasdf.jscope  last.jscope  lll.jscope
Turret/EWARM/STM32_Test/List/: STM32_Test.map
Turret/EWARM/settings/: Project.wsdt  STM32.STM32.cspy.bat  STM32.STM32.cspy.ps1  STM32.STM32.driver.xcl  STM32.STM32.general.xcl  STM32.dbgdt  STM32.dnx  STM32_Test.STM32_Test.cspy.bat  STM32_Test.STM32_Test.cspy.ps1  STM32_Test.STM32_Test.general.xcl  STM32_Test.dbgdt  STM32_Test.dnx
Turret/Inc/: main.h  stm32f4xx_it.h
Turret/Src/: dataType.h  main.c  stm32f4xx_hal_msp.c
capstone2/: .mxproject  capstone2.ioc  new.jscope
capstone2/EWARM/: Project.eww  capstone2.dep  capstone2.ewd  capstone2.ewp  capstone2.ewt
capstone2/EWARM/capstone2/: .ninja_deps  .ninja_log
capstone2/EWARM/capstone2/BrowseInfo/: .ninja_log  build.ninja  capstone2.pbd  capstone2.pbd.browse  capstone2_part0.pbi  capstone2_part1.pbi  capstone2_part2.pbi  capstone2_part3.pbi  capstone2_part4.pbi
capstone2/EWARM/capstone2/Exe/: capstone2.out  capstone2.sim
capstone2/EWARM/capstone2/List/: capstone2.map
capstone2/EWARM/settings/: Project.wsdt  capstone2.capstone2.cspy.bat  capstone2.capstone2.cspy.ps1  capstone2.capstone2.driver.xcl  capstone2.capstone2.general.xcl  capstone2.dbgdt  capstone2.dnx
capstone2/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
capstone2/Src/: dataType.h  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
capstone_ws/src/estimation_pkg/: CMakeLists.txt  package.xml
capstone_ws/src/estimation_pkg/config/: turret_base2Cam.yaml  turret_base2Rail.yaml  turret_param.yaml
capstone_ws/src/estimation_pkg/include/estimation_pkg/: Kinematics.h  YamlConfig.h  drone_estimator.hpp  turret_controller.hpp
capstone_ws/src/estimation_pkg/include/estimation_pkg/serialComm/: Comm.h  DataType.h  DataType2.h  cserial.h  cserial2.h  serial_turret.hpp  t_serial.h
capstone_ws/src/estimation_pkg/launch/: CommandCenter.launch  tracking.launch
capstone_ws/src/estimation_pkg/src/: #drone_estimator.cpp#  Kinematics.cpp  drone_estimator.cpp  main.cpp  turret_controller.cpp
capstone_ws/src/estimation_pkg/src/serialComm/: Comm.cpp  Comm_turret.cpp  cserial.cpp  cserial2.cpp  serial_turret.cpp  t_serial.cpp
capstone_ws/src/turret_assembly/: CMakeLists.txt  package.xml
capstone_ws/src/turret_description/: CMakeLists.txt  package.xml
capstone_ws/src/turret_description/config/: joint_names_ADT.yaml  joint_names_adt.yaml
capstone_ws/src/turret_description/launch/: display.launch  gazebo.launch
capstone_ws/src/turret_description/meshes/: Base_link.STL  Camera_Link.STL  Camera_Pitch_Link.STL  Camera_link.STL  Camera_pitch_link.STL  Pitch_Link.STL  Pitch_link.STL  Rail_Link.STL  Rail_link.STL  Yaw_Link.STL  Yaw_link.STL  base_link.STL
capstone_ws/src/turret_description/urdf/: ADT.csv  ADT.urdf  adt.csv  adt.urdf
(+66 files in other folders)
