<?xml version="1.0"?>
<package format="2">
  <name>estimation_pkg</name>
  <version>0.0.0</version>
  <description>The estimation_pkg package</description>

  <maintainer email="byeongilham@todo.todo">byeongilham</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gb_visual_detection_3d_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>turret_assembly</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>kdl_parser</build_depend>

  <!-- track IK-->
  <!-- <build_depend>boost</build_depend> -->
  <!-- <build_depend>trac_ik_lib</build_depend> -->
  <!-- <build_depend>orocos_kdl</build_depend> -->
  <!-- <build_depend>liborocos-kdl-dev</build_depend> -->

  <!-- <depend>trajectory_msgs</depend> -->
  <!-- <depend>kdl_parser</depend> -->

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gb_visual_detection_3d_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>turret_assembly</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turret_assembly</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <depend>orocos_kdl</depend>
  <depend>trac_ik_lib</depend>

  <!-- track IK-->
  <!-- <exec_depend>boost</exec_depend>-->
  <!-- <exec_depend>orocos_kdl</exec_depend>-->
  <!-- <exec_depend>liborocos-kdl</exec_depend>-->
  <!-- <exec_depend>trac_ik_lib</exec_depend>-->
  <!-- <exec_depend>xacro</exec_depend>-->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
